layout efficiency upgrade

--- a/index.html
+++ b/index.html
@@ -6,64 +6,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
-    /* ----- DARK THEME BASICS ----- */
+    :root {
+      /* dark theme */
+      --bg: #050815;
+      --text: #f3f4f6;
+      --subtext: #9ca3af;
+      --card-bg: #0b1020;
+      --border: #1e2638;
+      --accent: #16a34a;
+      --accent-hover: #1fc556;
+      --input-bg: #020617;
+      --input-border: #4b5563;
+      --status-ok: #4ade80;
+      --status-warn: #facc15;
+      --status-bad: #f87171;
+      --fee: #f97316;
+      --copy-bg: #1e40af;
+      --copy-bg-hover: #1d4ed8;
+      --min-btn: #facc15;
+      --min-btn-hover: #fbbf24;
+    }
+    body.light-theme {
+      --bg: #f3f4f6;
+      --text: #111827;
+      --subtext: #4b5563;
+      --card-bg: #ffffff;
+      --border: #e5e7eb;
+      --accent: #15803d;
+      --accent-hover: #16a34a;
+      --input-bg: #f9fafb;
+      --input-border: #d1d5db;
+      --status-ok: #16a34a;
+      --status-warn: #ca8a04;
+      --status-bad: #dc2626;
+      --fee: #c2410c;
+      --copy-bg: #1d4ed8;
+      --copy-bg-hover: #1e40af;
+      --min-btn: #eab308;
+      --min-btn-hover: #ca8a04;
+    }
+
+    /* ----- BASICS ----- */
     body {
       font-family: system-ui, sans-serif;
-      background: #050815;
-      color: #f3f4f6;
+      background: var(--bg);
+      color: var(--text);
       margin: 0;
       padding: 16px;
     }
-    h1, h2 { margin-top: 0; color:#ffffff; }
+    h1, h2 { margin-top: 0; color: var(--text); }
 
     .card {
-      background: #0b1020;
+      background: var(--card-bg);
       border-radius: 12px;
-      padding: 16px;
-      margin-bottom: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-      border: 1px solid #1e2638;
+      padding: 12px 14px;
+      margin-bottom: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.35);
+      border: 1px solid var(--border);
     }
 
-    .row { display:flex; flex-wrap:wrap; gap:16px; }
-    .col { flex:1 1 280px; }
-
     input, button, select {
-      padding:8px 10px;
-      border-radius:8px;
-      border:1px solid #4b5563;
-      background:#020617;
-      color:#f9fafb;
-      font-size:14px;
+      padding: 6px 8px;
+      border-radius: 8px;
+      border:1px solid var(--input-border);
+      background: var(--input-bg);
+      color: var(--text);
+      font-size: 14px;
     }
 
     button {
       cursor:pointer;
       border:none;
-      background:#16a34a;
+      background:var(--accent);
       font-weight:600;
-      transition:background .2s;
+      transition:background .15s;
     }
-    button:hover { background:#1fc556; }
+    button:hover { background:var(--accent-hover); }
     button[disabled] { opacity:.5; cursor:not-allowed; }
 
     select { cursor:pointer; }
 
-    .small { font-size:12px; color:#9ca3af; }
+    .small { font-size:12px; color:var(--subtext); }
 
     .tag {
       display:inline-block;
       padding:2px 8px;
       border-radius:999px;
       font-size:11px;
-      background:#111827;
-      border:1px solid #1f2937;
+      background:#11182733;
+      border:1px solid var(--border);
       margin-right:6px;
       margin-top:4px;
     }
-    .status-ok { color:#4ade80; }
-    .status-warn { color:#facc15; }
-    .status-bad { color:#f87171; }
+    .status-ok { color:var(--status-ok); }
+    .status-warn { color:var(--status-warn); }
+    .status-bad { color:var(--status-bad); }
 
     .mono {
       font-family:Courier, monospace;
@@ -72,13 +109,79 @@
       user-select:text !important;
     }
 
-    /* ----- UNLOCKABLE GREEN GLOW ----- */
-    .vault-card {
-      transition: box-shadow .3s, border .3s;
+    /* ----- HEADER ----- */
+    .header-row {
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
+      flex-wrap:wrap;
+      margin-bottom:12px;
     }
-    .vault-unlockable {
-      box-shadow:0 0 18px 4px rgba(0,255,140,0.45);
-      border:1px solid #22ff99 !important;
+    .header-left {
+      display:flex;
+      align-items:center;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .logo {
+      width:40px;
+      height:40px;
+      border-radius:8px;
+    }
+    .header-title-block {
+      display:flex;
+      flex-direction:column;
+    }
+    .header-subtitle {
+      font-size:12px;
+      color:var(--subtext);
+    }
+
+    .header-right {
+      display:flex;
+      align-items:center;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .theme-toggle {
+      padding:4px 8px;
+      font-size:12px;
+      background:#334155;
+    }
+    body.light-theme .theme-toggle {
+      background:#e5e7eb;
+      color:#111827;
+    }
+
+    /* connect mini */
+    .wallet-info {
+      display:flex;
+      flex-direction:column;
+      gap:2px;
+      align-items:flex-end;
+    }
+
+    /* ----- GRID LAYOUT ----- */
+    .main-grid {
+      display:flex;
+      flex-wrap:wrap;
+      gap:16px;
+    }
+    .grid-left {
+      flex:1 1 320px;
+      display:flex;
+      flex-direction:column;
+      gap:16px;
+    }
+    .grid-right {
+      flex:1 1 320px;
+    }
+
+    .about-columns {
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(240px, 1fr));
+      gap:4px 16px;
     }
 
     /* ----- COPY BUTTON ----- */
@@ -86,21 +189,21 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      width:28px;
-      height:28px;
-      min-width:28px;
-      min-height:28px;
+      width:26px;
+      height:26px;
+      min-width:26px;
+      min-height:26px;
       border-radius:6px;
-      background:#1e40af;
+      background:var(--copy-bg);
       cursor:pointer;
-      position: relative; /* for popup positioning */
+      margin-left:6px;
     }
     .copy-icon-btn:hover {
-      background:#1d4ed8;
+      background:var(--copy-bg-hover);
     }
     .copy-icon-btn svg {
-      width:16px;
-      height:16px;
+      width:14px;
+      height:14px;
       fill:white;
       display:block;
     }
@@ -114,7 +217,7 @@
       font-size:10px;
       padding:2px 6px;
       border-radius:999px;
-      border:1px solid #4b5563;
+      border:1px solid var(--border);
       opacity:0;
       pointer-events:none;
       animation: copy-pop 0.8s ease-out forwards;
@@ -127,36 +230,91 @@
       100% { opacity:0; transform:translate(-50%, -8px); }
     }
 
-    /* ----- PIE CHART (price goal) ----- */
-    .price-goal-wrapper {
+    /* ----- VAULT CARDS GRID ----- */
+    #locksContainer {
+      display:grid;
+      grid-template-columns:repeat(auto-fill, minmax(520px, 1fr));
+      gap:14px;
+    }
+
+    .vault-card {
+      transition: box-shadow .3s, border .3s;
+    }
+    .vault-unlockable {
+      box-shadow:0 0 18px 4px rgba(0,255,140,0.45);
+      border:1px solid #22ff99 !important;
+    }
+
+    .vault-header {
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:8px;
+      margin-bottom:6px;
+    }
+    .vault-header-left {
+      display:flex;
+      align-items:center;
+      gap:6px;
+      flex-wrap:wrap;
+    }
+    .vault-header-right {
+      display:flex;
+      align-items:center;
+      gap:6px;
+      flex-wrap:wrap;
+    }
+
+    .vault-body {
+      display:flex;
+      flex-direction:row;
+      gap:12px;
+      align-items:flex-start;
+      margin-top:4px;
+    }
+    .vault-col-main {
+      flex:2 1 260px;
+      font-size:13px;
+    }
+    .vault-col-buttons {
+      flex:0 0 90px;
+      display:flex;
+      flex-direction:column;
+      justify-content:flex-end;
+      gap:6px;
+    }
+    .vault-col-chart {
+      flex:0 0 80px;
       display:flex;
       flex-direction:column;
       align-items:center;
-      justify-content:flex-start;
-      gap:4px;
-      min-width:70px;
+      gap:6px;
+      margin-top:2px; /* top-aligned to header */
+    }
+    .vault-col-feeds {
+      flex:1 1 140px;
+      font-size:11px;
+      color:var(--subtext);
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      min-width:140px;
     }
 
+    /* Pie + time bar */
     .price-goal-pie {
-      width:56px;
-      height:56px;
+      width:52px;
+      height:52px;
       border-radius:50%;
       background:#020617;
       border:1px solid #e5e7eb;
     }
-
-    /* ----- TIME PROGRESS BAR ----- */
     .time-progress-wrapper {
-      display:flex;
-      flex-direction:column;
-      align-items:flex-start;
-      justify-content:flex-start;
-      gap:4px;
-      min-width:120px;
+      width:100%;
     }
     .time-progress-bar-bg {
       width:100%;
-      height:10px;
+      height:8px;
       border-radius:999px;
       background:#1f2937;
       overflow:hidden;
@@ -169,60 +327,105 @@
       transition:width 0.3s linear;
     }
 
-    .vault-asset-label {
-      font-size:11px;
-      text-transform:uppercase;
-      letter-spacing:0.08em;
-      color:#9ca3af;
-      margin-bottom:4px;
-    }
-
     .fee-note {
       margin-top:8px;
       font-size:11px;
-      color:#f97316;
+      color:var(--fee);
+    }
+
+    .minimize-btn,
+    .maximize-btn {
+      background:var(--min-btn);
+      color:#111827;
+      font-size:11px;
+      padding:4px 6px;
+      border-radius:6px;
+    }
+    .minimize-btn:hover,
+    .maximize-btn:hover {
+      background:var(--min-btn-hover);
+    }
+
+    .vault-card.collapsed .vault-body {
+      display:none;
+    }
+    .vault-card.collapsed .minimize-btn {
+      display:none;
+    }
+    .vault-card .maximize-btn {
+      display:none;
+    }
+    .vault-card.collapsed .maximize-btn {
+      display:inline-flex;
+    }
+
+    body.light-theme .card {
+      box-shadow:0 8px 18px rgba(0,0,0,0.08);
+    }
+
+    @media (max-width: 720px) {
+      #locksContainer {
+        grid-template-columns:1fr;
+      }
+      .vault-body {
+        flex-direction:column;
+      }
+      .vault-col-buttons {
+        flex-direction:row;
+        justify-content:flex-start;
+      }
+      .vault-col-chart {
+        flex-direction:row;
+        justify-content:flex-start;
+      }
     }
   </style>
 </head>
 
 <body>
-  <h1 style="display:flex;align-items:center;gap:12px;flex-wrap:wrap;">
-    <span style="font-size:30px;">⏳</span>
-    <span>
-      <b>Price + Time Vaults (PLS / pDAI / HEX)</b><br>
-      <span class="small">Discipline vaults with price-mediated unlock &amp; time backup</span>
-    </span>
-  </h1>
+  <header class="header-row">
+    <div class="header-left">
+      <img src="PulseChainLogoTransparent.png" class="logo" alt="PulseChain logo" />
+      <div class="header-title-block">
+        <div><b>Price + Time Vaults (PLS / pDAI / HEX)</b></div>
+        <div class="header-subtitle">
+          Discipline vaults with price-mediated unlock &amp; time backup
+        </div>
+      </div>
+    </div>
 
-  <div class="card">
-    <button id="connectBtn">Connect Wallet</button>
-    <span id="walletAddress" class="mono"></span>
-    <div class="small" id="networkInfo"></div>
-  </div>
+    <div class="header-right">
+      <button id="themeToggle" class="theme-toggle">🌙 Night</button>
+      <div class="wallet-info">
+        <button id="connectBtn">Connect Wallet</button>
+        <span id="walletAddress" class="mono"></span>
+        <div class="small" id="networkInfo"></div>
+      </div>
+    </div>
+  </header>
 
   <div class="card">
     <h2>About This App</h2>
-    <div class="small">
-      • This site lets you create <b>immutable vaults</b> for PLS, pDAI, or HEX.<br>
-      • Your tokens are locked until the <b>market price</b> crosses your threshold,
-        or a <b>backup time unlock</b> is reached.<br>
-      • Price feed uses PulseX pools for the chosen asset (PLS/USDC &amp; DAI backup, pDAI/DAI, HEX/USDC &amp; DAI backup).<br>
-      • Feeds are chosen by <b>USD-normalized liquidity</b> (using known decimals for DAI=18, USDC=6).<br>
-      • Vault logic is enforced fully on-chain; no one (including the deployer) can change the rules.<br><br>
-      • To deposit: send the chosen token (or PLS) directly to the vault address.<br>
-      • To withdraw: call <b>Withdraw</b> once the price OR the backup time condition is met.<br>
-      • Time-based unlock still works even if price pairs are illiquid.<br>
-      <div class="fee-note">
-        ⚠ A <b>0.5% fee</b> is charged on successful withdrawal.
+    <div class="about-columns small">
+      <div>
+        • Create <b>immutable vaults</b> for PLS, pDAI, or HEX.<br>
+        • Vaults unlock when the <b>USD price</b> crosses your threshold.<br>
+        • Backup <b>time unlock</b> ensures funds can never be bricked.<br>
+        • PLS uses high-precision DAI feeds; HEX uses USDC + DAI backup.
+      </div>
+      <div>
+        • Prices are derived from PulseX pools, with USD-normalized liquidity selection.<br>
+        • Thresholds are always <b>USD × 1e18</b> per 1 whole token.<br>
+        • Time-based unlock still works even if price feeds break.<br>
+        • ⚠ A <b>0.5% fee</b> is charged on successful withdrawal.
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col">
+  <div class="main-grid">
+    <div class="grid-left">
       <div class="card">
         <h2>Create New Lock</h2>
-
         <form id="createForm">
           <label>Asset</label><br>
           <select id="assetSelect">
@@ -242,9 +445,22 @@
           <div id="createStatus" class="small"></div>
         </form>
       </div>
+
+      <div class="card">
+        <h2>Add Vault Address Manually</h2>
+        <div class="small" style="margin-bottom:6px;">
+          Paste any supported vault address (created by this factory) to add it to your list.
+        </div>
+        <div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap;">
+          <input id="manualVaultInput" type="text" placeholder="0x..."
+                 style="flex:1 1 220px;min-width:200px;" />
+          <button id="addVaultBtn">Add Vault</button>
+        </div>
+        <div id="manualAddStatus" class="small"></div>
+      </div>
     </div>
 
-    <div class="col">
+    <div class="grid-right">
       <div class="card">
         <h2>Global Price Feed</h2>
         <div class="small" style="margin-bottom:6px;">
@@ -258,16 +474,6 @@
         <div id="globalPriceRaw" class="small"></div>
       </div>
     </div>
-  </div>
-
-  <div class="card">
-    <h2>Add Vault Address Manually</h2>
-    <div class="small" style="margin-bottom:6px;">
-      Paste any supported vault address (created by this factory) to add it to your list.
-    </div>
-    <input id="manualVaultInput" type="text" placeholder="0x..." style="width:70%;" />
-    <button id="addVaultBtn">Add Vault</button>
-    <div id="manualAddStatus" class="small"></div>
   </div>
 
   <div class="card">
