--- a/index.html
+++ b/index.html
@@ -371,7 +371,12 @@
     .maximize-btn {
       flex: 0 0 auto;
     }
-
+    /* Fix for ABOUT card broken line wrapping */
+    .about-onecol {
+      white-space: normal !important;
+      line-height: 1.45;
+      word-break: normal;
+    }
   </style>
 </head>
 
