--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       gap: 6px;
       white-space: nowrap;
       position: relative !important;
-      right: 880px !important; /* your chosen final left-shift */
+      right: 820px !important; /* your chosen final left-shift */
       margin-top: 0 !important;
       padding-top: 0 !important;
     }
@@ -370,6 +370,10 @@
     }
     .vault-card.collapsed .maximize-btn {
       display: inline-flex;
+    }
+        /* Lower the Withdraw / Remove button column slightly */
+    .vault-col-buttons {
+        margin-top: 10px;   /* try 6–12px for fine control */
     }
   </style>
 
