--- a/index.html
+++ b/index.html
@@ -373,7 +373,11 @@
     }
         /* Lower the Withdraw / Remove button column slightly */
     .vault-col-buttons {
-        margin-top: 10px;   /* try 6–12px for fine control */
+        margin-top: 11px;   /* try 6–12px for fine control */
+    }
+        /* Lower the PRIMARY / BACKUP / EFFECTIVE blurb slightly */
+    .vault-col-feeds {
+        margin-top: 11px;   /* adjust 4–14px as needed */
     }
   </style>
 
