--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
         <h2>Global Price Feed</h2>
         <div class="small" style="margin-bottom:6px;">
           Source: PulseX <b>pools</b> for the selected asset.<br>
-          Each asset uses a primary <b>(1°)</b> &amp; backup <b>2°</b> feed.<br>
-          Feeds chosen by <b>USD-normalized liquidity</b>.<br>
+          Each asset uses a primary (<b>1°</b>) &amp; backup (<b>2°</b>) feed.<br>
+          Feeds chosen by USD-normalized liquidity.<br>
           Pair address:<br>
           <span id="pairAddress" class="mono"></span>
         </div>
