--- a/index.html
+++ b/index.html
@@ -449,6 +449,11 @@
       opacity: 0;
       transition: opacity 0.05s linear;
     }
+    #locksContainer.is-loading {
+      opacity: 0.4;
+      pointer-events: none;
+      transition: opacity 0.2s;
+    }
 
   </style>
 </head>
