--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
     }
   
     .wallet-info {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-      align-items: flex-end;
+        display: flex;
+        flex-direction: row;
+        gap: 2px;
+        align-items: flex-end;
     }
   
     /* ===== 3 COLUMN MOVE ===== */
