--- a/index.html
+++ b/index.html
@@ -558,10 +558,10 @@
       align-items: center;
       gap: 6px;
     }
-    .vault-label-pdai {
-      padding-right: 1px;
+    .label-wide {
+      padding-right: 10px;
+      padding-left: 4px;
     }
-
   </style>
 </head>
 
