--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
       display: flex;
       align-items: center;
       gap: 12px;
-      white-space: nowrap;
-      flex-wrap: nowrap;
+      flex-wrap: wrap;      /* allow wrapping */
+      white-space: normal;  /* allow text to wrap if needed */
     }
 
     .vault-body {
