--- a/index.html
+++ b/index.html
@@ -399,15 +399,17 @@
 
     .copy-popup {
       position: absolute;
-      top: -24px;
-      left: 20px;
+      top: -4px;          /* very close above */
+      left: 18px;         /* just to the right */
       background: #4ade80;
       color: #000;
       padding: 2px 6px;
       font-size: 11px;
       border-radius: 4px;
       white-space: nowrap;
+      pointer-events: none;
     }
+
 
     .reorder-buttons {
       display:flex;
