--- a/index.html
+++ b/index.html
@@ -608,16 +608,15 @@
         <div class="small">
           <ul style="margin:0;padding-left:18px;">
             <li>Immutable vaults for PLS, pDAI, or HEX.</li>
-            <li>Unlocks on USD price threshold or time.</li>
-            <li>Feeds from PulseX pools.</li>
+            <li>Unlocks on USD price threshold, or on time.</li>
+            <li>Feeds from PulseX pools, primary and backup.</li>
             <li>No admin keys; all logic on-chain.</li>
-            <li>Thresholds are USD × 1e18 per 1 token.</li>
-            <li>Time unlock is unbrickable.</li>
+            <li>Time unlock as unbrickable failsafe.</li>
             <li>Factory registry enables vault restore.</li>
-            <li>Single-use vaults; no re-lock.</li>
-            <li>Post-withdraw deposits require Rescue.</li>
+            <li>Intended as Single-use vaults.</li>
+            <li>Rescue function for accidental 2nd deposits.</li>
           </ul>
-          <div style="margin-top:6px;">
+          <div style="margin-top:6px; color:#c62828;">
             ⚠ 0.5% fee on successful withdrawal.
           </div>
         </div>
