--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
             <li>Intended as Single-use vaults.</li>
             <li>Rescue function for accidental 2nd deposits.</li>
           </ul>
-          <div style="margin-top:6px; color:#c62828;">
+          <div style="margin-top:6px; color:#facc15;">
             ⚠ 0.5% fee on successful withdrawal.
           </div>
         </div>
