--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
               <a href="https://otter.pulsechain.com/address/0xf6aDe1a6db5bD96aD782E7AA1F566D11166719F0/contract"
                  target="_blank"
                  style="color:#3b82f6;">
-                 see on Otter.pulsechain
+                 see on Otter.pulsechain.com
               </a>
               <div style="margin-left:18px; margin-top:1px; font-size:12px; color:var(--subtext);">
                 Factory address = 0xf6aDe1a6db5bD96aD782E7AA1F566D11166719F0
