--- a/user-guide.html
+++ b/user-guide.html
@@ -61,6 +61,12 @@
       background: #1e3a8a;
       border: 1px solid #3b82f6;
     }
+    /* User Guide: widen & shift tabs */
+    .header-tabs {
+      justify-content: center !important;
+      gap: 40px !important;   /* increased spacing between tabs */
+      margin-left: 80px !important;  /* shifts the whole tab group rightward */
+    }
 
   </style>
 </head>
