--- a/index.html
+++ b/index.html
@@ -682,9 +682,9 @@
     <div class="card">
       <h1>PulseLocker – User Guide</h1>
       <p>
-        PulseLocker lets you create immutable single-use vaults for PLS, pDAI, or HEX.  
+        PulseLocker lets you create immutable single-use vaults for PLS, pDAI, or HEX.<br> 
         Each vault unlocks when <strong>either</strong> a target USD price is met or a backup
-        <strong>time unlock</strong> arrives. Everything is fully on-chain with no admin keys.
+        <strong>time unlock</strong> arrives.<br> Everything is fully on-chain with no admin keys.<br>
         The contract is fully verified, immutable, and on-chain, so no one — including the creator — can alter, pause, or access your vault.
       </p>
 
