--- a/index.html
+++ b/index.html
@@ -516,6 +516,34 @@
       color: #3b82f6;
       text-decoration: none;
     }
+    /* ----------------------------------------------------------
+   GLOBAL FIX: Keep PIE + TIME always side-by-side everywhere
+   ---------------------------------------------------------- */
+.vault-mobile-row {
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px;
+  width: 100%;
+  flex-wrap: nowrap !important;
+}
+
+.vault-mobile-row .vault-col-pie,
+.vault-mobile-row .vault-col-time {
+  flex: 1 1 50% !important;
+  max-width: 50% !important;
+  box-sizing: border-box;
+  min-width: 0;
+}
+
+/* Prevent inner content from forcing wrapping */
+.vault-col-pie,
+.vault-col-time {
+  white-space: normal;
+  overflow: hidden;
+}
+
   </style>
 </head>
 
